Fix temporary the carousel on mobile and fix email CORS
The carousel will be replaced by a custom component

--- a/app/stylesheets/base/_base.scss
+++ b/app/stylesheets/base/_base.scss
@@ -12,7 +12,7 @@ body {
 section {
   align-items: center;
   display: flex;
-  min-height: 100vh;
+  min-height: 100vmin;
   padding-bottom: 2rem;
   padding-top: 2rem;
 }
