--- a/app/stylesheets/sections/_about.scss
+++ b/app/stylesheets/sections/_about.scss
@@ -21,6 +21,10 @@
   font-family: 'Cardo', serif;
   font-size: 1.25rem;
   padding-top: 2rem;
+
+  @media (min-width: $screen-tablet) {
+    padding-left: 0;
+  }
 }
 
 .about-detailed {
